# bot

./: .env  .gitignore  .gitmodules  ARES.py  Cargo.toml  FTCScout.py  Flask.py  README.md  World_OPR.py  ares.db  ares.db-client_wal_index  bash_commands.txt  monitor_and_run.sh  pyproject.toml  requirements.txt  team_opr_scores_2024.json  testAPI.py  world_opr_scores_.json
API_Library/: FirstAPI.py  apiparams.py
API_Library/API_Models/: Event.py  Team.py
API_Library/RobotMath/: MatrixMath.py  TeamMatrixBuilder.py
Background_Bot/: Background.py  World_OPR.py
Discord/: BotState.py  __init__.py  commands.py  utils.py
Discord/Slash_Commands/: MatchImageCreator.py  __init__.py  cmdDeveloper.py  cmdFavorite.py  cmdHelp.py  cmdMatch.py  cmdTeam.py  template.html
Response_Handler/: FindData.py  HandleMessageResponse.py  SaveData.py  SupabaseHandler.py  __init__.py
Response_Handler/API_Library/: APIParams.py  FirstAPI.py  __init__.py
Response_Handler/API_Library/API_Models/: Assistant.py  Event.py  Season.py  Team.py  __init__.py
Response_Handler/API_Library/RobotMath/: TeamMatrixBuilder.py
Response_Handler/API_Models/: Team.py
src/: alliance.rs  bot_state.rs  config.rs  favorites.rs  image_generator.rs  main.rs  match_data.rs  supabase_handler.rs
src/commands/: favorite.rs  help.rs  match_cmd.rs  mod.rs  team.rs
